# docs/swagger.json
@@ -4321,12 +4321,6 @@
                     },
                     {
                         "type": "string",
-                        "description": "Business ID",
-                        "name": "business_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "Status",
                         "name": "status",
                         "in": "query"
